# cool-vcpkg

./: CoolVcpkg.cmake  LICENSE  readme.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-update.md  feature-request.md
automatic-setup/: CMakeLists.txt
